Not show profile picker when chrome's launched by notification activation

In this case, always use |last_used_profile| which contains the profile id
extracted from the notification launch id, rather than |last_opened_profiles|.

Bug: 833663, 734095
Change-Id: I1f8721ba1dcb7b7ab60264dfcae873f664d8121e
Reviewed-on: https://chromium-review.googlesource.com/1031010
Commit-Queue: Xi Cheng <chengx@chromium.org>
Reviewed-by: Tommy Martino <tmartino@chromium.org>
Cr-Commit-Position: refs/heads/master@{#554175}
Former-commit-id: 4a4c327a66bf2628085047b311ff9b5ef540e418