chrome/browser/ui/startup/startup_browser_creator.cc
@@ -755,16 +755,26 @@ bool StartupBrowserCreator::LaunchBrowserForLastProfiles(
       chrome::startup::IS_NOT_PROCESS_STARTUP;
   chrome::startup::IsFirstRun is_first_run = first_run::IsChromeFirstRun() ?
       chrome::startup::IS_FIRST_RUN : chrome::startup::IS_NOT_FIRST_RUN;
+
+  // On Windows, when chrome is launched by notification activation where the
+  // kNotificationLaunchId switch is used, always use |last_used_profile| which
+  // contains the profile id extracted from the notification launch id.
+  // TODO(chengx): Investigate adding a test for this startup behavior.
+  bool was_windows_notification_launch = false;
+#if defined(OS_WIN)
+  was_windows_notification_launch =
+      command_line.HasSwitch(switches::kNotificationLaunchId);
+#endif  // defined(OS_WIN)
+
   // |last_opened_profiles| will be empty in the following circumstances:
   // - This is the first launch. |last_used_profile| is the initial profile.
-  // - The user exited the browser by closing all windows for all
-  // profiles. |last_used_profile| is the profile which owned the last open
-  // window.
+  // - The user exited the browser by closing all windows for all profiles.
+  //   |last_used_profile| is the profile which owned the last open window.
   // - Only incognito windows were open when the browser exited.
-  // |last_used_profile| is the last used incognito profile. Restoring it will
-  // create a browser window for the corresponding original profile.
+  //   |last_used_profile| is the last used incognito profile. Restoring it will
+  //   create a browser window for the corresponding original profile.
   // - All of the last opened profiles fail to initialize.
-  if (last_opened_profiles.empty()) {
+  if (last_opened_profiles.empty() || was_windows_notification_launch) {
     if (CanOpenProfileOnStartup(last_used_profile)) {
       Profile* profile_to_open =
           last_used_profile->IsGuestSession()
@@ -854,12 +864,14 @@ bool StartupBrowserCreator::ProcessLastOpenedProfiles(
     SessionStartupPref startup_pref = GetSessionStartupPref(command_line, *it);
     if (*it != last_used_profile &&
         startup_pref.type == SessionStartupPref::DEFAULT &&
-        !HasPendingUncleanExit(*it))
+        !HasPendingUncleanExit(*it)) {
       continue;
+    }
     if (!LaunchBrowser((*it == last_used_profile) ? command_line
                                                   : command_line_without_urls,
-                       *it, cur_dir, is_process_startup, is_first_run))
+                       *it, cur_dir, is_process_startup, is_first_run)) {
       return false;
+    }
     // We've launched at least one browser.
     is_process_startup = chrome::startup::IS_NOT_PROCESS_STARTUP;
   }
